--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Spotify clone</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head> 
 <body>
     <div class="container flex ">
@@ -63,12 +64,40 @@
       <div class="nav">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.04304 5.79285 2.83594 12 9.04304 18.2071 10.4573 16.7928 5.66436 12 10.4573 7.20706 9.04304 5.79285ZM14.957 18.2072 21.1641 12.0001 14.957 5.793 13.5427 7.20721 18.3356 12.0001 13.5427 16.793 14.957 18.2072Z"></path></svg>
         <div class="button">
-          <button>Sign up</button>
-        <button>Log in</button>
+          <button class="signup-btn">Sign up</button>
+        <button class="log-btn">Log in</button>
         </div>
       </div>
+      </div>
+      <div class="spotify-playlist">
+        <h1>Popular artists</h1>
+        <div class="cardcontainer">
+          <div class="cards">
+            <div class="play">
+              <i class="fa-solid fa-play"></i>
+            </div>
+            <img class="first" src="https://i.scdn.co/image/ab67616100005174cb6926f44f620555ba444fca" alt="image1">
+            <h2>Pritam</h2>
+            <span>Artist</span> 
+            </div>
+        
+            <div class="cards">
+              <img class="second" src="https://i.scdn.co/image/ab676161000051745ba2d75eb08a2d672f9b69b7" alt="image2">
+              <h2>Arijit Singh</h2>
+              <span>Artist</span> 
+              </div>
+              <div class="cards">
+                <img class="third" src="https://i.scdn.co/image/ab676161000051748094cf9aa2f6ed775614c073" alt="image3">
+                <h2>Sachin-Jigar</h2>
+                <span>Artist</span> 
+                </div>
+                <div class="cards">
+                  <img class="fourth" src="https://i.scdn.co/image/ab67616100005174b19af0ea736c6228d6eb539c" alt="image4">
+                  <h2>A.R Rahman</h2>
+                  <span>Artist</span> 
+                  </div>
     </div>
   </div>
- 
+ <script src="script.js" ></script>
 </body>
 </html>
